# faerber_pyside

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build-qt.sh  main.py  make.py  make.sh  pyproject.toml
.github/workflows/: codeql-analysis.yml  main.yml
.pyinstaller/: build.spec
src/: App.py  PreferencesWindow.py  main.py
src/i18n/: de.ts
src/qt/: QClickDropLabel.py  QIGNWorker.py  QImageLabel.py  QWaitingSpinner.py
src/res/: resources.qrc
src/res/data/: colorschemes.json
src/res/styles/: Ubuntu.qss
src/ui/: MainWindow.py  MainWindow.ui  Preferences.ui  mainwindow.ui
src/utils/: FaerberProtocolHandler.py  load_stylesheet.py  logger.py  qt.py
