[tool.poetry]
name = "faerber"
version = "0.1.0"
description = "GUI tool to match your wallpaper to your favorite color scheme"
authors = ["winston <hey@winston.sh>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
image-go-nord = "^0.1.5"
PySide6 = "^6.2.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pyinstaller = "^4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '.pyinstaller/*.spec'
extend-exclude = '''
^/src/res/__init__.py|
^/src/ui/.+\.py
'''